# wallet

./: CMakeLists.txt  CREDITS.md  README.md
.github/workflows/: build.yml  ci.yml
apps/: izan.rc  izan_main.cpp  watch_main.cpp
cmake/: gui_deps.cmake
core/codec/: abi.cpp  abi.hpp
core/crypto/: bip39.cpp  bip39.hpp  btc.cpp  btc.hpp  eth.cpp  eth.hpp  hd.cpp  hd.hpp  secret_import.cpp  secret_import.hpp  sol.cpp  sol.hpp
core/crypto/detail/: path.hpp
core/secure/: secure_bytes.hpp
core/units/: decimal.hpp  u256.hpp
data/: chains.json  tokens.json
domain/assets/: balances.cpp  balances.hpp  history.cpp  history.hpp  portfolio.cpp  portfolio.hpp  prices.cpp  prices.hpp  token_registry.cpp  token_registry.hpp
domain/btc/: coin_select.cpp  coin_select.hpp  esplora.cpp  esplora.hpp
domain/chains/: chain_spec.cpp  chain_spec.hpp  jsonrpc.cpp  jsonrpc.hpp
domain/config/: config_trust.cpp
domain/sol/: jupiter.cpp  jupiter.hpp  sol_tx.cpp  sol_tx.hpp  solana.cpp  solana.hpp
domain/swap/: lifi.cpp  lifi.hpp
domain/tx/: txflow.cpp  txflow.hpp
keyd/: audit.cpp  audit.hpp  autolock.cpp  autolock.hpp  child.cpp  client.cpp  client.hpp  proposals.hpp  protocol.hpp  signer.cpp  signer.hpp
platform/: rand.c
platform/ipc/: named_pipe.cpp  named_pipe.hpp
platform/time/: local_clock.cpp  local_clock.hpp
tests/: abi_test.cpp  bip39_test.cpp  btc_domain_test.cpp  btc_test.cpp  chains_test.cpp  eth_test.cpp  family_test.cpp  history_test.cpp  i18n_test.cpp  import_test.cpp  keyd_test.cpp  linkbits_test.cpp  local_clock_test.cpp  portfolio_test.cpp  prices_test.cpp  proposals_test.cpp  rig_test.cpp  secure_bytes_test.cpp  sol_domain_test.cpp  sol_test.cpp  swap_test.cpp  txflow_test.cpp  units_test.cpp  wallet_ui_test.cpp
tests/data/: bip39_vectors.inc  derive_vectors.py  eip55_vectors.inc  lifi_quote.json  regen.md  slip10_ed25519_vectors.inc
ui/: smoke_main.cpp
ui/assets/lang/: en.json  es.json  fr.json  it.json  ja.json  ko.json  ru.json  zh.json
ui/i18n/: catalog.cpp  catalog.hpp
ui/pages/: history_page.cpp  history_page.hpp  portfolio_page.cpp  portfolio_page.hpp  send_page.cpp  send_page.hpp  swap_page.cpp  swap_page.hpp  vault_page.cpp  vault_page.hpp
ui/pages/vault/: accounts_view.cpp  accounts_view.hpp  create_view.cpp  create_view.hpp  import_view.cpp  import_view.hpp  list_view.cpp  list_view.hpp  secret_view.cpp  secret_view.hpp  unlock_view.cpp  unlock_view.hpp
ui/rig/: wallet_rig.cpp  wallet_rig.hpp
ui/shell/: app.cpp  app.hpp  chrome_widgets.cpp  fonts.cpp  ui_layout.cpp  ui_layout.hpp  win_chrome.cpp  win_chrome.hpp
ui/wallet/: import_model.cpp  import_model.hpp  presets.cpp  presets.hpp  session.cpp  session.hpp  store.cpp  store.hpp
ui/widgets/: address_field.cpp  address_field.hpp  amount_field.cpp  amount_field.hpp  asset_row.cpp  asset_row.hpp  avatar.cpp  avatar.hpp  button.cpp  button.hpp  choice_row.cpp  copy_text.cpp  copy_text.hpp  design.cpp  design.hpp  dialog.cpp  dialog.hpp  hyperlink.cpp  hyperlink.hpp  identity.cpp  identity.hpp  kit.cpp  kit.hpp  label.cpp  label.hpp  list_row.cpp  menu.cpp  menu.hpp  qr.cpp  secret_field.cpp  secret_field.hpp  text_field.cpp  text_field.hpp  tooltip.cpp  tx_row.cpp  tx_row.hpp
